2005-10-08 Pierrick LE GALL

	* translation: new items related to configuration parameters
	gallery_title and gallery_description in GUI.

2005-10-08 Pierrick LE GALL

	* modification: configuration parameters gallery_title and
	gallery_description are GUI managed in
	Administration>Configuration>General

	* bug fixed: configuration parameters (use|show)_(exif|iptc) and
	authorize_remembering should have been deleted from config table
	some time ago.
	
2005-10-08 Pierrick LE GALL

	* new: mass virtual categories movement manager in
	Administration>Categories>Move screen.

2005-10-05 Pierrick LE GALL

	* bug 160 fixed: (part one of the bug) hard coded column name of
	users table had to be replaced by the configurable column
	name. This correction was made by a full rewrite of filtered users
	list management. The other bug (not submited in bugtracker) that
	needed this rewrite was that when you choose "all" as target for
	mass users modification, you expected to apply modification on
	filtered users, not all users.

	* bug 160 fixed: (part two of the bug) hard coded column name for
	primary key in mass_updates function.

	* modification: configuration parameter users_page is now located
	in the correct file (include/config_default.inc.php instead of
	admin/user_list.php)

2005-09-27 Pierrick LE GALL
	
	* bug 168 fixed: crash when language file does not
	exists. Constant PHPWG_DEFAULT_LANGUAGE added. New function
	get_language_filepath always used to find language files.

2005-09-26 Pierrick LE GALL

	* bug 158 fixed: display error on "double selects" screens (with
	MSIE, strange behavior). VDigital modification optimizes width
	usage :-)

2005-09-25 Pierrick LE GALL

	* bug 163 fixed: link error when cookies disabled in admin/stats

2005-09-24 Pierrick LE GALL

	* bug fixed: HTML error on nested UL in categories menu.

	* bug 161 fixed: guest_id not taken into account for history table
	insert.

	* bug 164 fixed: category inserted in history table becomes too