@@ -1,3 +1,7 @@
+2005-10-09 Pierrick LE GALL
+
+	* new: "quick start" section in Administration>General>Instructions
+	
 2005-10-08 Pierrick LE GALL
 
 	* translation: new items related to configuration parameters
